feat(admin): add server-paged order queue